--- a/src/Intro.scss
+++ b/src/Intro.scss
@@ -5,7 +5,7 @@ $green: #009249;
 .intro {
     .header {
         @extend .header;
-        color: #009249;
+        color: $green;
     }
 
     .subheader {
@@ -18,6 +18,6 @@ $green: #009249;
     }
 
     .btn-success {
-        padding: $displacement $displacement-l;
+        padding: $displacement/2 $displacement*2;
     }
 }
