--- a/src/DynamicForm.scss
+++ b/src/DynamicForm.scss
@@ -1,18 +1,19 @@
 @import "./comms.scss";
 
 // colors
-$option-outline: #7f7f7f;
-$option-fill: #f2f2f2;
+$option-outline: #A6A6A6;
+$option-fill: white;
 $option-outline-selected: #009249;
 $option-fill-selected: #e2f0d9;
 $option-aside: #595959;
 $back-button-color: #BFBFBF;
 
 $question-image-height: 10rem;
-$options-border: 3px solid $option-outline;
-$options-border-selected: 3px solid $option-outline-selected;
+$options-border: 2px solid $option-outline;
+$options-border-selected: 2px solid $option-outline-selected;
 $option-input-height: 2rem;
 $option-input-width: 5rem;
+$options-round-edges: 8px;
 
 // progress bar specs
 $box-radius: 0.5rem;
@@ -26,7 +27,7 @@ $stats-image-height: 5rem;
 $stat-width: 11rem;
 $stat-background: #80B5D5;
 $stat-text: white;
-$option-fill-stats: #eeeeee;
+$option-fill-stats: white;
 
 
 
@@ -71,6 +72,7 @@ $option-fill-stats: #eeeeee;
         font-size: $emphasis-font-size;
         font-weight: $font-heavy;
         user-select: none;
+        border-radius: $options-round-edges;
         cursor: pointer;
     }
 
