--- a/src/comms.scss
+++ b/src/comms.scss
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import "~bootstrap/scss/bootstrap";
 
-$content-width: 42vw;
+// colors
+$green: #009249;
 
+$content-width: 42vw;
 $spacing: 2rem;
 $displacement: 1rem;
 $displacement-m: 3rem;
